<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:gravity="center|top"
                android:id="@+id/layout">

    <TextView
        android:text="@string/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:id="@+id/textView"/>

    <Button
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/app1"
        android:id="@+id/button1"
        android:layout_below="@+id/textView"
        android:layout_marginTop="40dp"
        android:background="#f08c35"
        />

    <Button
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/app2"
        android:id="@+id/button2"
        android:layout_below="@+id/button1"
        android:layout_marginTop="10dp"
        android:background="#f08c35"/>

    <Button
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/app3"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:background="#f08c35"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/app4"
        android:id="@+id/button4"
        android:background="#f08c35"
        android:layout_below="@+id/button3"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/app5"
        android:id="@+id/button5"
        android:background="#f08c35"
        android:layout_below="@+id/button4"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="230dp "
        android:layout_height="wrap_content"
        android:text="@string/app6"
        android:id="@+id/button6"
        android:background="#f08c35"
        android:layout_below="@+id/button5"
        android:layout_marginTop="10dp" />

</RelativeLayout>
